--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ isort = "^5.11.4"
 poetry = "^1.3.1"
 pydocstyle = "^6.2.2"
 pylint = "^2.15.9"
+pytest = "^7.2.0"
 
 [build-system]
 requires = ["poetry-core"]
